--- a/package.json
+++ b/package.json
@@ -49,9 +49,9 @@
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
-    "@react-router/dev": "^7.2.0",
-    "@react-router/node": "^7.2.0",
-    "@react-router/serve": "^7.2.0",
+    "@react-router/dev": "^7.4.1",
+    "@react-router/node": "^7.4.1",
+    "@react-router/serve": "^7.4.1",
     "@tailwindcss/postcss": "^4.0.8",
     "@trigger.dev/sdk": "^3.3.16",
     "@vitest/coverage-v8": "^3.0.6",
@@ -67,7 +67,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-grid-gallery": "^1.0.1",
-    "react-router": "^7.2.0",
+    "react-router": "^7.4.1",
+    "react-router-dom": "^7.4.1",
     "remix-themes": "^2.0.4",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
